# ProffieConfig

./: CMakeLists.txt  init.sh  mingw-tc.cmake
docs/: build.md
resources/props/: manifest.pconf
resources/props/Fett263_7_15/: data.pconf
src/: CMakeLists.txt
src/components/ui/: CMakeLists.txt  bitmap.cpp  bitmap.hpp  build.cpp  build.hpp  dialog.cpp  dialog.hpp  frame.cpp  frame.hpp  text.cpp  text.hpp  types.hpp  values.cpp  values.hpp
src/components/ui/controls/: button.cpp  button.hpp  checkbox.cpp  checkbox.hpp  choice.cpp  choice.hpp  filepicker.cpp  filepicker.hpp  radios.cpp  radios.hpp  segmented.cpp  segmented.hpp  stepper.cpp  stepper.hpp  text.cpp  text.hpp
src/components/ui/detail/: dynamic_list.hpp  general.hpp  scaffold.hpp
src/components/ui/dialogs/: message.cpp  message.hpp  progress.cpp  progress.hpp
src/components/ui/helpers/: busy.cpp  busy.hpp  dialog_buttons.cpp  dialog_buttons.hpp  foreach.hpp  if.cpp  if.hpp  labeled.cpp  labeled.hpp
src/components/ui/indication/: progress.cpp  progress.hpp
src/components/ui/layout/: collapsible.cpp  collapsible.hpp  group.cpp  group.hpp  panel.cpp  panel.hpp  scrolled.cpp  scrolled.hpp  selector.cpp  selector.hpp  split.cpp  split.hpp  stack.cpp  stack.hpp
src/components/ui/layout/priv/: groupbox.cpp  groupbox.hpp
src/components/ui/priv/: helpers.cpp  helpers.hpp  tlw.cpp  tlw.hpp  winbase.cpp  winbase.hpp
src/components/ui/static/: hyperlink.cpp  image.cpp  image.hpp  label.cpp  label.hpp
src/launcher/: main.cpp  routines.cpp  routines.hpp
src/proffieconfig/: CMakeLists.txt  main.cpp
(+124 files in other folders)
